# Training

./: .clang-format  CMakeLists.txt
include/: Variable.h
src/: Variable.cpp
test/: main.cpp  test_training.cpp
